# vmos-edge

./: CMakeLists.txt  README.md  vcpkg.json
QtScrcpyCore/include/: QtScrcpyCoreDef.h
QtScrcpyCore/src/device/: device.cpp
QtScrcpyCore/src/device/controller/inputconvert/: inputconvertnormal.cpp
QtScrcpyCore/src/device/server/: server.cpp  server.h
QtScrcpyCore/src/devicemanage/: devicemanage.cpp
src/: CMakeLists.txt  language_ar.ts  language_en.ts  language_es.ts  language_fil.ts  language_fr.ts  language_id.ts  language_ja.ts  language_km.ts  language_ko.ts  language_ms.ts  language_pt.ts  language_ru.ts  language_th.ts  language_uk.ts  language_ur.ts  language_vi.ts  language_zh-hant.ts  language_zh.ts  resources.qrc  vmosedge.rc
src/qml/: App.qml  AppConfig.qml  CloudListView.qml  CreateCloudPhonePopup.qml  GridTileLayout.qml  MainWindow.qml  PadWindow.qml
src/src/: main.cpp  selectedlistmodel.cpp  structs.h  treemodel.cpp
src/src/helper/: XapkInstaller.cpp  XapkInstaller.h
src/src/scrcpy_wrapper/: devicemanager.cpp  devicemanager.h  groupcontroller.cpp  groupcontroller.h  scrcpy_observer.cpp  scrcpy_observer.h
